// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiContextMenuItem is rendered 1`] = `
<button
  aria-label="aria-label"
  class="ouiContextMenuItem testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="ouiContextMenu__itemLayout"
  >
    <span
      class="ouiContextMenuItem__text"
    >
      Hello
    </span>
  </span>
</button>
`;

exports[`OuiContextMenuItem props disabled is rendered 1`] = `
<button
  class="ouiContextMenuItem ouiContextMenuItem-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="ouiContextMenu__itemLayout"
  >
    <span
      class="ouiContextMenuItem__text"
    />
  </span>
</button>
`;

exports[`OuiContextMenuItem props hasPanel is rendered 1`] = `
<button
  class="ouiContextMenuItem"
  type="button"
>
  <span
    class="ouiContextMenu__itemLayout"
  >
    <span
      class="ouiContextMenuItem__text"
    />
    <span
      class="ouiContextMenu__arrow"
      data-ouiicon-type="arrowRight"
    />
  </span>
</button>
`;

exports[`OuiContextMenuItem props href renders a link 1`] = `
<a
  aria-label="aria-label"
  class="ouiContextMenuItem testClass1 testClass2"
  data-test-subj="test subject string"
  href="url"
  rel="noreferrer"
>
  <span
    class="ouiContextMenu__itemLayout"
  >
    <span
      class="ouiContextMenuItem__text"
    />
  </span>
</a>
`;

exports[`OuiContextMenuItem props icon is rendered 1`] = `
<button
  class="ouiContextMenuItem"
  type="button"
>
  <span
    class="ouiContextMenu__itemLayout"
  >
    <span
      class="ouiContextMenu__icon"
    />
    <span
      class="ouiContextMenuItem__text"
    />
  </span>
</button>
`;

exports[`OuiContextMenuItem props onClick renders a button 1`] = `
<button
  aria-label="aria-label"
  class="ouiContextMenuItem testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="ouiContextMenu__itemLayout"
  >
    <span
      class="ouiContextMenuItem__text"
    />
  </span>
</button>
`;

exports[`OuiContextMenuItem props rel is rendered 1`] = `
<a
  aria-label="aria-label"
  class="ouiContextMenuItem testClass1 testClass2"
  data-test-subj="test subject string"
  href="url"
  rel="help noreferrer"
>
  <span
    class="ouiContextMenu__itemLayout"
  >
    <span
      class="ouiContextMenuItem__text"
    />
  </span>
</a>
`;

exports[`OuiContextMenuItem props size m is rendered 1`] = `
<button
  class="ouiContextMenuItem"
  type="button"
>
  <span
    class="ouiContextMenu__itemLayout"
  >
    <span
      class="ouiContextMenuItem__text"
    />
  </span>
</button>
`;

exports[`OuiContextMenuItem props size s is rendered 1`] = `
<button
  class="ouiContextMenuItem ouiContextMenuItem--small"
  type="button"
>
  <span
    class="ouiContextMenu__itemLayout"
  >
    <span
      class="ouiContextMenuItem__text"
    />
  </span>
</button>
`;

exports[`OuiContextMenuItem props target is rendered 1`] = `
<a
  aria-label="aria-label"
  class="ouiContextMenuItem testClass1 testClass2"
  data-test-subj="test subject string"
  href="url"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="ouiContextMenu__itemLayout"
  >
    <span
      class="ouiContextMenuItem__text"
    />
  </span>
</a>
`;
